# compas_occt

./: .gitignore  404.html  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  environment.yml  index.html  log.txt  mkdocs.yml  nurbs_curve.brep  pyproject.toml  requirements-dev.txt  screenshots.py  sitemap.xml  tasks.py  test_makeshape  test_makeshape.cpp  test_static_lib.py  translated_screws.step  versions.json
.github/workflows/: build.yml  docs.yml  examples.yml  release.yml
0.1.1/: api.html  examples.html  genindex.html  index.html  installation.html  license.html  search.html  tutorial.html
0.1.1/api/: compas_occt.html
0.1.10/: api.html  examples.html  genindex.html  index.html  installation.html  license.html  search.html  tutorial.html
0.1.10/_static/: documentation_options.js
0.1.10/api/: compas_occt.html
0.1.11/: api.html  examples.html  genindex.html  index.html  installation.html  license.html  search.html  tutorial.html
0.1.11/_static/: documentation_options.js
0.1.11/api/: compas_occt.html
0.1.12/: api.html  examples.html  genindex.html  index.html  installation.html  license.html  search.html  tutorial.html
0.1.12/_static/: documentation_options.js
0.1.12/api/: compas_occt.html
0.1.13/: api.html  examples.html  genindex.html  index.html  installation.html  license.html  search.html  tutorial.html
0.1.13/_static/: documentation_options.js
0.1.13/api/: compas_occt.html
0.1.15/: api.html  examples.html  genindex.html  index.html  installation.html  license.html  search.html  tutorial.html
0.1.15/_static/: documentation_options.js
0.1.15/api/: compas_occt.html
0.1.2/: api.html  examples.html  genindex.html  index.html  installation.html  license.html  search.html  tutorial.html
0.1.2/api/: compas_occt.html
0.1.4/: api.html  examples.html  genindex.html  index.html  installation.html  license.html  search.html  tutorial.html
0.1.4/api/: compas_occt.html
0.1.5/: api.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  search.html  searchindex.js  tutorial.html
0.1.5/_static/: documentation_options.js
0.1.5/api/: compas_occt.html
0.1.7/: api.html  examples.html  genindex.html  index.html  installation.html  license.html  search.html  tutorial.html
0.1.7/_static/: documentation_options.js
0.1.7/api/: compas_occt.html
0.1.8/: api.html  examples.html  genindex.html  index.html  installation.html  license.html  search.html  tutorial.html
0.1.8/_static/: documentation_options.js
0.1.8/api/: compas_occt.html
0.1.9/: api.html  examples.html  genindex.html  index.html  installation.html  license.html  search.html  tutorial.html
0.1.9/_static/: documentation_options.js
0.1.9/api/: compas_occt.html
acknowledgements/: index.html
api/compas_occt.brep.OCCBrep/: index.html
api/compas_occt.brep.OCCBrepEdge/: index.html
api/compas_occt.brep.OCCBrepFace/: index.html
api/compas_occt.brep.OCCBrepLoop/: index.html
api/compas_occt.brep.OCCBrepVertex/: index.html
api/compas_occt.conversions/: index.html
api/compas_occt.geometry.OCCCurve/: index.html
api/compas_occt.geometry.OCCCurve2d/: index.html
api/compas_occt.geometry.OCCNurbsCurve/: index.html
api/compas_occt.geometry.OCCNurbsSurface/: index.html
api/compas_occt.geometry.OCCSurface/: index.html
changelog/: index.html
data/: assembly.step  box.step  box0.step  box1.step  box2.step  box3.step  brep.step  brep.stepbak  brep_assembly.step  my_point.step  tree.json  tutorial.step  tutorial.xbf  tutorial2.step  tutorial2.xbf
docs/: acknowledgements.md  api.rst  conf.py  index.md  index.rst  installation.md  installation.rst  tutorial.md
docs/api/: compas_occt.brep.OCCBrep.md  compas_occt.brep.OCCBrepEdge.md  compas_occt.brep.OCCBrepFace.md  compas_occt.brep.OCCBrepLoop.md  compas_occt.brep.OCCBrepVertex.md  compas_occt.conversions.md  compas_occt.geometry.OCCCurve.md  compas_occt.geometry.OCCCurve2d.md  compas_occt.geometry.OCCNurbsCurve.md  compas_occt.geometry.OCCNurbsSurface.md  compas_occt.geometry.OCCSurface.md  compas_occt.rst
examples/: basic_test.py  curve_sampling_test.py  index.html  nurbs_test.py  point_example.py
examples/breps/: brep_explorer.py  brep_from_extrusion.py  brep_from_loft.py  brep_overlap.py  brep_slice.py  brep_step_attributes.py  brep_with_holes.py  index.html
examples/curves/: curve_comparison2.py
examples/step/: step.py  step_from_json.py
examples/surfaces/: surface_from_points.py
installation/: index.html
latest/: 404.html  api.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  search.html  sitemap.xml  tutorial.html
latest/acknowledgements/: index.html
latest/api/: compas_occt.html
latest/changelog/: index.html
latest/examples/: index.html
latest/installation/: index.html
latest/license/: index.html
latest/search/: search_index.json
latest/tutorial/: index.html
license/: index.html
logs_38725396930/: 0_Build (macos-latest, 3.10).txt  1_Test source distribution.txt
logs_38725396930/Build (macos-latest, 3.10)/: 10_Post Run actions_checkout@v4.txt  11_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Set up conda.txt  4_Configure conda channels.txt  5_Run compas-dev_compas-actions.build@v4.txt  system.txt  (+1 more)
original_cmakelists/: CMakeLists.txt  pyproject.toml
original_currently_failing_mac_intel_arm/: CMakeLists.txt  pyproject.toml
src/: brep_adaptor.cpp  brep_boolean.cpp  brep_explore.cpp  brep_fix.cpp  brep_make.cpp  brep_props.cpp  brep_relations.cpp  compas.h  curve2d.cpp  curves.cpp  geometry.cpp  handles.h  io.cpp  meshing.cpp  module.cpp  nurbscurve.cpp  nurbssurface.cpp  occt.h  point.cpp  primitives.cpp  step.cpp  surfaces.cpp  types.cpp
stable/: index.html
tests/: geometry_test.py  run_examples_headless.py  test_booleans.py  test_breps.py  test_conversions.py  test_data_nurbscurve.py  test_data_nurbssurface.py  test_io.py  test_trivial.py  test_zerocopy.py
tools/: build_example_pages.py  patch_compas_viewer.py
tutorial/: index.html
(+196 files in other folders)
