[build-system]
requires = ["scikit-build-core >=0.10", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[project]
name = "compas_occt"
description = "Nanobind wrapper for OCCT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
]
authors = [
    { name = "Petras Vestartas", email = "petrasvestartas@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "License :: OSI Approved :: MIT License"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com//compas_occt"
Repository = "https://github.com//compas_occt"
Issues = "https://github.com//compas_occt/issues"

# ============================================================================
# pytest configuration
# ============================================================================

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests", "src/compas_occt"]
python_files = ["test_*.py", "*_test.py", "test.py"]
norecursedirs = [
    "external/*",
    "build/*",
    "dist/*",
    "*.egg-info",
    ".git",
    ".tox",
    ".env",
    ".pytest_cache",
    ".ruff_cache"
]
addopts = [
    "-ra",
    "--strict-markers",
    "--doctest-glob=*.rst",
    "--tb=short",
    "--import-mode=importlib"
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ALLOW_UNICODE",
    "ALLOW_BYTES",
    "NUMBER"
]

# ============================================================================
# scikit-build configuration
# ============================================================================

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
wheel.py-api = "cp312"  # Build all Python currently supported versions
cmake.version = ">=3.15"
cmake.build-type = "Release"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "src/compas_occt/__init__.py"

[tool.scikit-build.cmake.define]
CMAKE_POLICY_DEFAULT_CMP0135 = "NEW"

# ============================================================================
# cibuildwheel configuration
# ============================================================================

[tool.cibuildwheel]
build-verbosity = 3
test-requires = ["numpy", "compas", "pytest", "build"]
test-command = "pip install numpy compas && pip list && pytest {project}/tests"
build-frontend = "pip"
manylinux-x86_64-image = "manylinux2014"
skip = ["*_i686", "*-musllinux_*", "*-win32", "pp*", "cp312-*"]
macos.environment.MACOSX_DEPLOYMENT_TARGET = "11.00"
# macos.archs = ["x86_64"]

# Pre-installation dependencies for wheel building
before-build = [
    "pip install cmake ninja",
    "pip install -r {project}/requirements-dev.txt",
]

# # Clean any previous OCCT build to ensure fresh build for this architecture
# "rm -rf {project}/external/occt {project}/external/occt-build {project}/external/occt-install",
# "mkdir -p {project}/external/occt-install/include/opencascade"

# Control memory usage during builds
environment.CMAKE_BUILD_PARALLEL_LEVEL = "2"

# Reduce build modules to minimum necessary
environment.CMAKE_ARGS = "-DBUILD_SHARED_LIBS=OFF -DBUILD_TESTING=OFF"

# OCCT Configuration
environment.CMAKE_PREFIX_PATH = "{project}/external/occt-install"
environment.OCCT_SOURCE_DIR = "{project}/external/occt"
environment.OCCT_BINARY_DIR = "{project}/external/occt-build"
environment.OCCT_INSTALL_DIR = "{project}/external/occt-install"
environment.OCCT_CMAKE_FLAGS = "-DBUILD_LIBRARY_TYPE=Static -DUSE_TK=OFF -DUSE_VTK=OFF -DUSE_FREETYPE=OFF -DBUILD_SAMPLES_MFC=OFF -DBUILD_SAMPLES_QT=OFF -DBUILD_Inspector=OFF -DINSTALL_SAMPLES=OFF -DBUILD_USE_PCH=OFF -DBUILD_OPT_PROFILE=Production -DBUILD_MODULE_ApplicationFramework=OFF -DBUILD_MODULE_DataExchange=OFF -DBUILD_MODULE_Draw=OFF -DBUILD_MODULE_VisualizationTest=OFF"

# Eigen configuration
environment.EIGEN_INCLUDE_DIR = "{project}/external/eigen"

# ============================================================================
# code style configuration
# ============================================================================

[tool.black]
line-length = 179

[tool.ruff]
line-length = 179
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["compas", "compas_occt"]
force-single-line = true
order-by-type = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["I001"]
"tests/*" = ["I001"]
"tasks.py" = ["I001"]
"docs/examples/*.py" = []

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pycodestyle]
max-doc-length = 179

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"

# ============================================================================
# bumpversion configuration
# ============================================================================

[tool.bumpversion]
current_version = "0.1.14"
message = "Bump version to {new_version}"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "src/compas_occt/__init__.py"
search = "{current_version}"
replace = "{new_version}"

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "Unreleased"
replace = "[{new_version}] {now:%Y-%m-%d}"