[build-system]
requires = ["scikit-build-core >=0.10", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[project]
name = "compas_occt"
description = "Nanobind wrapper for OCCT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "compas>=2.4",
]
authors = [
    { name = "Petras Vestartas", email = "petrasvestartas@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "License :: OSI Approved :: MIT License"
]
version = "0.1.15"

[project.optional-dependencies]
dev = [
    "pytest >=7",
    "ruff",
    "build",
]
docs = [
    "markdown-callouts >=0.4",
    "markdown-exec >=1.8",
    "mike",
    "mkdocs >=1.6",
    "mkdocs-autorefs >=1.4",
    "mkdocs-coverage >=1.0",
    "mkdocs-git-revision-date-localized-plugin >=1.2",
    "mkdocs-llmstxt >=0.2",
    "mkdocs-material >=9.5",
    "mkdocs-minify-plugin >=0.8",
    "mkdocs-redirects >=1.2",
    "mkdocs-section-index >=0.3",
    "mkdocstrings[python]",
    "pydantic >=2.10",
    "tomli >=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com//compas_occt"
Repository = "https://github.com//compas_occt"
Issues = "https://github.com//compas_occt/issues"

# ============================================================================
# pytest configuration
# ============================================================================

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests", "src/compas_occt"]
python_files = ["test_*.py", "*_test.py", "test.py"]
norecursedirs = [
    "external/*",
    "build/*",
    "dist/*",
    "*.egg-info",
    ".git",
    ".tox",
    ".env",
    ".pytest_cache",
    ".ruff_cache"
]
addopts = [
    "-ra",
    "--strict-markers",
    "--doctest-glob=*.rst",
    "--tb=short",
    "--import-mode=importlib"
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ALLOW_UNICODE",
    "ALLOW_BYTES",
    "NUMBER"
]

# ============================================================================
# scikit-build configuration
# ============================================================================

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
wheel.py-api = "cp312"  # Build a single stable-ABI (abi3) wheel for cp312+
cmake.version = ">=3.15"
cmake.build-type = "Release"
# NOTE: version is hardcoded in [project] above (kept in sync by [tool.bumpversion.files]).
# The scikit_build_core.metadata.regex dynamic-version provider is disabled because it
# raises KeyError('dynamic') under scikit-build-core 0.12.2 on Python 3.14.

[tool.scikit-build.cmake.define]
CMAKE_POLICY_DEFAULT_CMP0135 = "NEW"

# ============================================================================
# cibuildwheel configuration
# ============================================================================

[tool.cibuildwheel]
build-verbosity = 3
# typing-extensions is pinned >=4.14.1 to satisfy pydantic (pulled in transitively); without it
# the test env resolves an older 4.12.x and pip emits a dependency-conflict warning.
test-requires = ["numpy", "compas", "pytest", "build", "typing-extensions>=4.14.1"]
test-command = "pip list && pytest {project}/tests"
build-frontend = "pip"
# manylinux_2_28 (AlmaLinux 8), matching compas_cgal. The test step installs `compas`, which
# pulls scipy; modern scipy (>=1.16) ships ONLY manylinux_2_28 wheels (it dropped the older
# manylinux2014/manylinux_2_17 ones), so on a manylinux2014 image pip falls back to building
# scipy from source and fails with "Dependency 'OpenBLAS' not found". OCCT itself needs no BLAS.
manylinux-x86_64-image = "manylinux_2_28"
# We build a single stable-ABI (abi3) wheel via wheel.py-api = "cp312"; do NOT skip cp312.
skip = ["*_i686", "*-musllinux_*", "*-win32", "pp*"]
macos.environment.MACOSX_DEPLOYMENT_TARGET = "11.00"
# macos.archs = ["x86_64"]

# Pre-installation dependencies for wheel building. Only the build toolchain is needed here:
# scikit-build-core + nanobind already come from [build-system].requires (installed into the
# isolated build env), so we add just cmake/ninja. We deliberately do NOT install
# requirements-dev.txt here -- it is dev-only tooling (lint/release/test helpers), none of which
# is needed to build the wheel (test deps are declared separately in test-requires).
before-build = [
    "pip install cmake ninja",
]

# Control memory usage during builds
environment.CMAKE_BUILD_PARALLEL_LEVEL = "2"

# Basic CMake settings (the rest is handled in CMakeLists.txt)
environment.CMAKE_ARGS = "-DBUILD_SHARED_LIBS=OFF -DBUILD_TESTING=OFF"

# OCCT's Visualization toolkits (TKService/TKV3d, linked for the XDE STEP-attributes path)
# need the X11 development headers when OCCT is compiled on Linux. manylinux2014 is CentOS 7 -> yum.
[tool.cibuildwheel.linux]
before-all = "yum install -y libX11-devel libXext-devel libXmu-devel libXi-devel mesa-libGL-devel"

# ============================================================================
# code style configuration
# ============================================================================

[tool.black]
line-length = 179

[tool.ruff]
line-length = 179
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["compas", "compas_occt"]
force-single-line = true
order-by-type = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["I001"]
"tests/*" = ["I001"]
"tasks.py" = ["I001"]
"docs/examples/*.py" = []

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pycodestyle]
max-doc-length = 179

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"

# ============================================================================
# bumpversion configuration
# ============================================================================

[tool.bumpversion]
current_version = "0.1.15"
message = "Bump version to {new_version}"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "src/compas_occt/__init__.py"
search = "{current_version}"
replace = "{new_version}"

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "Unreleased"
replace = "[{new_version}] {now:%Y-%m-%d}"